--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -88,3 +88,22 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=registry,ref=ghcr.io/kubi-zone/kubizone:buildcache
           cache-to: type=registry,ref=ghcr.io/kubi-zone/kubizone:buildcache,mode=max
+
+      - name: fetch crate version
+        id: crate-version
+        uses: colathro/crate-version@1.0.0
+        with:
+          file: "./Cargo.toml"
+
+      - name: tag with crate version
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v5.4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          tag_prefix: "v"
+          custom_tag: ${{ steps.crate-version.outputs.version }}
+
+      - uses: taiki-e/create-gh-release-action@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          ref: "refs/tags/v${{ steps.crate-version.outputs.version }}"
