Tag before building

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -68,6 +68,20 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: fetch crate version
+        id: crate-version
+        uses: colathro/crate-version@1.0.0
+        with:
+          file: "./Cargo.toml"
+
+      - name: tag with crate version
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v5.4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          tag_prefix: "v"
+          custom_tag: ${{ steps.crate-version.outputs.version }}
+
       - name: docker meta
         id: meta
         uses: docker/metadata-action@v5
@@ -75,6 +89,7 @@ jobs:
           images: |
             ghcr.io/kubi-zone/kubizone
           tags: |
+            type=semver,pattern={{version}}
             type=schedule
             type=ref,event=branch
             type=ref,event=pr
@@ -89,20 +104,6 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=registry,ref=ghcr.io/kubi-zone/kubizone:buildcache
           cache-to: type=registry,ref=ghcr.io/kubi-zone/kubizone:buildcache,mode=max
-
-      - name: fetch crate version
-        id: crate-version
-        uses: colathro/crate-version@1.0.0
-        with:
-          file: "./Cargo.toml"
-
-      - name: tag with crate version
-        id: tag_version
-        uses: mathieudutour/github-tag-action@v5.4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          tag_prefix: "v"
-          custom_tag: ${{ steps.crate-version.outputs.version }}
 
       - uses: taiki-e/create-gh-release-action@v1
         with:
