--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "kubizone"
 description = "Kubizone Controller"
 keywords = ["kubernetes", "kubizone", "crd"]
 repository = "https://github.com/kubi-zone/kubizone"
-version = "0.2.0"
+version = "0.2.1"
 edition = "2021"
 publish = false
 
@@ -16,7 +16,8 @@ tracing-subscriber = "0.3"
 time = "0.3"
 
 # Kubernetes
-kubizone-crds = "0.2"
+kubizone-crds = "0.3"
+kubizone-common = "0.4.3"
 kube = { version = "0.88", default-features = false, features = ["derive", "rustls-tls", "client", "runtime"] }
 k8s-openapi = { version = "0.21", features = ["v1_29"] }
 
