--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,6 @@ version = "0.3.4"
 edition = "2021"
 publish = false
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 # Utilities
 tracing = "0.1"
@@ -16,14 +14,29 @@ tracing-subscriber = "0.3"
 time = "0.3"
 
 # Kubernetes
-kubizone-crds = "0.10.0"
+kubizone-crds = { version = "0.11.2", default-features = false }
 kubizone-common = "0.13.0"
-kube = { version = "0.88", default-features = false, features = ["derive", "rustls-tls", "client", "runtime"] }
-k8s-openapi = { version = "0.21", features = ["v1_29"] }
+kube = { version = "0.91.0", default-features = false, features = [
+    "derive",
+    "rustls-tls",
+    "client",
+    "runtime",
+] }
+k8s-openapi = { version = "0.22.0" }
 
 # Async
 tokio = { version = "1.33", features = ["macros", "rt"] }
 futures = "0.3"
 
 # CLI
-clap = { version = "4.4", features = ["derive"]}
+clap = { version = "4.4", features = ["derive"] }
+
+[features]
+# When enabled, will act on custom resources in `dev.kubi.zone` instead of the
+# real `kubi.zone api group.
+dev = ["kubizone-crds/dev"]
+default = ["v1_29"]
+v1_30 = ["kubizone-crds/v1_30"]
+v1_29 = ["kubizone-crds/v1_29"]
+v1_28 = ["kubizone-crds/v1_28"]
+v1_27 = ["kubizone-crds/v1_27"]
