--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,4 +1,4 @@
-on: 
+on:
   push:
     branches:
       - main
@@ -24,7 +24,7 @@ jobs:
 
       - name: run rustfmt
         run: cargo fmt --all -- --check
-      
+
       - name: run clippy
         run: cargo clippy --all-features
 
@@ -39,9 +39,9 @@ jobs:
         uses: dtolnay/rust-toolchain@master
         with:
           toolchain: stable
-      
+
       - name: run cargo test
-        run: cargo test --all-features
+        run: cargo test --lib
 
   tag:
     needs: [lint, test]
