--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,10 @@ version = "0.3.5"
 edition = "2021"
 publish = false
 
+[[bin]]
+name = "controller"
+path = "src/main.rs"
+
 [dependencies]
 # Utilities
 tracing = "0.1"
@@ -30,6 +34,10 @@ futures = "0.3"
 
 # CLI
 clap = { version = "4.4", features = ["derive"] }
+
+[dev-dependencies]
+indoc = "2.0.5"
+serde_yaml = "0.9.33"
 
 [features]
 # When enabled, will act on custom resources in `dev.kubi.zone` instead of the
