--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,7 +26,7 @@ jobs:
         run: cargo fmt --all -- --check
 
       - name: run clippy
-        run: cargo clippy --all-features
+        run: cargo clippy
 
   test:
     name: test
