--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ tracing-subscriber = "0.3"
 time = "0.3"
 
 # Kubernetes
-kubizone-crds = { version = "0.11.3", default-features = false }
+kubizone-crds = { version = "0.12.0", default-features = false }
 kubizone-common = "0.13.0"
 kube = { version = "0.91.0", default-features = false, features = [
     "derive",
@@ -36,8 +36,10 @@ futures = "0.3"
 clap = { version = "4.4", features = ["derive"] }
 
 [dev-dependencies]
+tracing-subscriber = "0.3.18"
 indoc = "2.0.5"
 serde_yaml = "0.9.33"
+serial_test = "3.1.1"
 
 [features]
 # When enabled, will act on custom resources in `dev.kubi.zone` instead of the
