--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ tokio = { version = "1.33", features = ["macros", "rt"] }
 futures = "0.3"
 
 # CLI
-clap = { version = "4.4", features = ["derive"] }
+clap = { version = "4.4", features = ["derive", "env"] }
 
 [dev-dependencies]
 tracing-subscriber = "0.3.18"
