--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,9 @@ tracing-subscriber = "0.3"
 time = "0.3"
 
 # Kubernetes
-kubizone-crds = { version = "0.12.0", default-features = false }
+kubizone-crds = { version = "0.12.1", default-features = false }
 kubizone-common = "0.13.0"
-kube = { version = "0.91.0", default-features = false, features = [
+kube = { version = "0.92.0", default-features = false, features = [
     "derive",
     "rustls-tls",
     "client",
@@ -28,7 +28,8 @@ kube = { version = "0.91.0", default-features = false, features = [
     "jsonpatch",
 ] }
 k8s-openapi = { version = "0.22.0" }
-json-patch = { version = "1.4.0" }
+json-patch = { version = "2.0.0" }
+jsonptr = { version = "0.4.7" }
 
 # Async
 tokio = { version = "1.33", features = ["macros", "rt"] }
