--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,7 +1,7 @@
-on: 
+on:
   push:
     tags:
-      - 'v*'
+      - "v*"
 
 name: publish
 
@@ -12,6 +12,22 @@ jobs:
     permissions:
       packages: write
     steps:
+      - name: checkout repository
+        uses: actions/checkout@v4
+
+      - name: set up qemu
+        uses: docker/setup-qemu-action@v3
+
+      - name: set up docker buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: login to github packages
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: docker meta
         id: meta
         uses: docker/metadata-action@v5
